--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "lucide-react": "^0.358.0",
     "mem": "^10.0.0",
     "moment": "^2.30.1",
-    "next": "14.1.3",
+    "next": "^14.1.4",
     "normalize-url": "^8.0.1",
     "nprogress": "^0.2.0",
     "p-map": "^7.0.1",
