turn client environment variable to server

--- a/.env
+++ b/.env
@@ -3,8 +3,10 @@
 # NOTION_DATABASE_ID=
 # NOTION_USER_ID=
 # NOTION_ABOUT_ME_PAGE=
-# NEXT_PUBLIC_ALGOLIA_APP_ID=
-# NEXT_PUBLIC_ALGOLIA_TOKEN=
-# NEXT_PUBLIC_GISCUS_REPO_ID=
-# NEXT_PUBLIC_GISCUS_CATEGORY=
-# NEXT_PUBLIC_GISCUS_CATEGORY_ID=
+# GISCUS_REPO=
+# GISCUS_REPO_ID=
+# GISCUS_CATEGORY=
+# GISCUS_CATEGORY_ID=
+# ALGOLIA_APP_ID=
+# ALGOLIA_TOKEN=
+# ALGOLIA_INDEX=
