--- a/package.json
+++ b/package.json
@@ -20,16 +20,16 @@
     "clsx": "^2.1.0",
     "is-url-superb": "^6.1.0",
     "lucide-react": "^0.358.0",
-    "mem": "^10.0.0",
+    "memoize": "^10.0.0",
     "moment": "^2.30.1",
-    "next": "^14.1.4",
+    "next": "^14.2.3",
     "normalize-url": "^8.0.1",
     "nprogress": "^0.2.0",
     "p-map": "^7.0.1",
     "p-queue": "^8.0.1",
     "prismjs": "^1.29.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-instantsearch": "^7.7.0",
     "recoil": "^0.7.7",
     "tailwind-merge": "^2.2.1",
