--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   tiendnm-blog:
-    image: tiendnm/blog:latest
+    image: blog-beta
     container_name: tiendnm-blog
     restart: always
     ports:
