--- a/package.json
+++ b/package.json
@@ -22,19 +22,19 @@
     "lucide-react": "^0.358.0",
     "memoize": "^10.0.0",
     "moment": "^2.30.1",
-    "next": "^14.2.3",
+    "next": "14.3.0-canary.70",
     "normalize-url": "^8.0.1",
     "nprogress": "^0.2.0",
     "p-map": "^7.0.1",
     "p-queue": "^8.0.1",
     "prismjs": "^1.29.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "19.0.0-beta-26f2496093-20240514",
+    "react-dom": "19.0.0-beta-26f2496093-20240514",
     "react-instantsearch": "^7.7.0",
-    "recoil": "^0.7.7",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.162.0"
+    "three": "^0.162.0",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -44,6 +44,7 @@
     "@types/react-dom": "^18",
     "@types/three": "^0.162.0",
     "autoprefixer": "^10.0.1",
+    "babel-plugin-react-compiler": "0.0.0-experimental-592953e-20240517",
     "eslint": "^8",
     "eslint-config-next": "14.1.3",
     "postcss": "^8",
