--- a/package.json
+++ b/package.json
@@ -8,6 +8,14 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "peerDependencies": {
+    "react": "^16.8.0 || ^17.0.0 || ^18.0.0 || ^19.0.0",
+    "react-dom": "^16.8.0 || ^17.0.0 || ^18.0.0 || ^19.0.0"
+  },
+  "resolutions": {
+    "react": "19.0.0-beta-26f2496093-20240514",
+    "react-dom": "19.0.0-beta-26f2496093-20240514"
+  },
   "dependencies": {
     "@giscus/react": "^3.0.0",
     "@notionhq/client": "^2.2.14",
